examples/test/testpolicy8772.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8772
  namespace: namespace385
spec:
  podSelector:
    matchLabels:
      key9: value18
      key40: value47
      key19: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value0
      podSelector:
        matchLabels:
          key37: value9
          key45: value17
          key35: value29
